--- a/Scripts/Run_pyBadlands.ipynb
+++ b/Scripts/Run_pyBadlands.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from pyBadlands.model import Model as badlandsModel\n",
@@ -17,7 +19,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Run model for 30 Myr.\n",
